<resources>
    <string name="app_name">TCT</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- login ui -->
    <string name="actionbar_title_signup">Sign up</string>
    <string name="action_bar_title_signin">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confim_password">Password</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_sign_in">Sign in</string>
    <string name="switch_to_sign_up">Not User? Sign up first!</string>
    <string name="switch_to_sign_in">Already registered? Sign in!</string>
    <string name="invalid_email_address">Invalid Email Address!</string>
    <string name="login_error_input">Please make sure all information is right!</string>
    <string name="login_failed">Sign in failed, please make sure that your email and password is correct!</string>
    
	<string name="category_brownbag">Brown bag</string>
	<string name="category_training">Training information</string>
	<string name="category_others">Others</string>
	
	<string name="feeds_empty">Nothing Get. Please pull to refresh.</string>
	
    <string name="actionbar_title_feeds">Chalk Board</string>
    <string name="action_bar_title_bbs">Channel</string>
    <string name="action_bar_title_userprofile">User Profile</string>
    <string name="action_bar_title_brownbag">TCT Brown bag</string> 
    <string name="action_bar_title_speaker">Speaker</string>
    <string name="action_bar_title_dicussion">Discussion</string> 
    
    <string name="action_register">Register</string>
    
	<string name="bb_summary">Summary</string>
	<string name="bb_speakers">Speakers:</string>
	<string name="bb_materials">Materials</string>
	<string name="bb_discussion">Discussion</string>
	
	<string name="isee">I see.</string>
	<string name="addToMyCalender">Add to my calender</string>
	<string name="msg_register_success">Thank you and Congrats !</string>
	<string name="msg_register_waiting">You are on the waiting list now ! Good Luck!</string>
	<string name="msg_register_failure">Something was wrong. Please try again later.</string>
	
	<!-- user profile -->
	<string name="profile_follow">Follow me</string>
    <string name="profile_unfollow">Unfollow</string>
    <string name="profile_email_address">Email:</string>
    <string name="profile_title">Title:</string>
    <string name="profile_topic">Topics:</string>
    
    <!-- action bar menus -->
    <string name="menu_search">Search</string>
    <string name="menu_signout">Sign out</string>

</resources>
