<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_listitem_light_color"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/avatar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_text_primary"
        android:gravity="center"
        android:padding="@dimen/avatar_padding" />

    <TextView
        android:id="@+id/follow_view"
        style="@style/Feeds.Item.Title.TextView"
        android:layout_width="@dimen/follow_view_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/follow_padding"
        android:layout_margin="@dimen/follow_margin"
        android:text="@string/profile_follow" 
        android:background="@drawable/register_button_bg"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alignmentMode="alignBounds"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:gravity="center"
        android:useDefaultMargins="true" >

        <TextView
            style="@style/Feeds.Item.Title.TextView"
            android:layout_column="0"
            android:layout_gravity="right"
            android:text="@string/profile_email_address" />

        <TextView
            android:id="@+id/email_view"
            style="@style/Feeds.Item.Title.TextView"
            android:layout_columnWeight="1" />

        <TextView
            style="@style/Feeds.Item.Title.TextView"
            android:layout_column="0"
            android:layout_gravity="right"
            android:text="@string/profile_title" />

        <TextView
            android:id="@+id/title_view"
            style="@style/Feeds.Item.Title.TextView"
            android:layout_columnWeight="1" />

        <TextView
            style="@style/Feeds.Item.Title.TextView"
            android:layout_column="0"
            android:layout_gravity="right"
            android:text="@string/profile_topic" />

        <TextView
            android:id="@+id/topic_list"
            style="@style/Feeds.Item.Title.TextView"
            android:layout_columnWeight="1" />
    </GridLayout>

</LinearLayout>